--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -75,6 +75,10 @@
         }
     </style>
     {% block extra_head %}{% endblock %}
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7253694940601462"
+     crossorigin="anonymous"></script>
+     
 </head>
 <body class="bg-gray-50 dark:bg-dark-900 min-h-screen" id="body">
     <!-- Navigation -->
